# krnx-bench

./: .env.example  .gitignore  KRNX Infrastructure Test and Proof Harness.docx  README.md  cli.py  pyproject.toml  ~$NX Infrastructure Test and Proof Harness.docx
bench/: __init__.py  config.py  models.py
bench/adapters/: __init__.py  base.py  baseline.py  docker_utils.py  krnx.py  naive_rag.py
bench/llm/: __init__.py  client.py
bench/reporting/: __init__.py  charts.py  summary.py  tables.py
bench/runners/: __init__.py  scenario.py  suite.py
bench/scenarios/: __init__.py  base.py
bench/scenarios/auditability/: __init__.py  provenance_chain.py
bench/scenarios/baseline/: __init__.py  niah.py
bench/scenarios/consistency/: __init__.py  fact_correction.py  temporal_versioning.py
bench/scenarios/durability/: __init__.py  crash_recovery.py
bench/scenarios/replay/: __init__.py  determinism.py  point_in_time.py
config/: default.yaml  scenarios.yaml
docker/: Dockerfile.bench  docker-compose.bench.yml
